build: add JUnit and Mockito